# cards

./: .gitignore  README.md  pyproject.toml  requirements.txt
scripts/: card_insert.py  create_db.py
src/: main.py
src/cards/: card.py  combat.py  enums.py  game.py  mainsys.py  models.py
src/controller/: command_handler.py  command_parser.py  game_controller.py
src/controller/commands/: activate_command.py  attach_command.py  attack_command.py  base_command.py  bench_command.py  evolve_command.py  inspect_command.py  mana_command.py  pass_command.py  retreat_command.py  use_command.py
src/core/: card_factory.py  carddata.py  cardproto.py  coins.py  combat.py  conditions.py  enums.py  game.py  rules.py
src/database/: card_repository.py  connection.py
src/effects/: base_effect.py  effect_registry.py  effects.py  monster_effects.py  player_effects.py
src/models/: README.md  card.py  mana.py  monster.py  player.py  utility.py
src/termio/: color.py  commands.py  termio.py  view.py
