[project]
name = "cards"
version = "0.1.0"
description = "Harper's sandbox"
authors = [
    {name = "Harper Phelan",email = "netcasper5005@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
]

[tool.poetry]
packages = [{include = "cards", from = "src"}]

[tool.poetry.scripts]
game = "cards.game:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
